--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,10 @@
 中国数字时代
 ------
 
+5-3 [西坡读史 | 印度人也是人](/articles/cdt/383010.md)
+
+5-3 [金财经 | 昨天，很多人的五一假期，结束在了北京西站](/articles/cdt/383011.md)
+
 5-2 [无逸说 | 中国点火vs印度点火，中国火神山vs印度火神山](/articles/cdt/383020.md)
 
 5-2 [观人随笔 | 当“圣母”成为贬义词](/articles/cdt/383026.md)
@@ -596,8 +600,4 @@
 4-1 [【404文库】基本常识｜刚刚！新华社和人民日报被查！](/articles/cdt/384265.md)
 
 4-1 [【404文库】鱼眼观察｜华为的“新发明”厉害了](/articles/cdt/384266.md)
-
-4-3 [【CDT 导览】电影审查在中国：谁在决定我们能看什么、不能看什么](/articles/cdt/384269.md)
-
-4-1 [情况有点复杂 | 中国有座城市，花了近30年把一条河熬成米其林级别的火锅汤底：淄博火锅鱼](/articles/cdt/384272.md)
 
