--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-3 [朝鲜高官星期天发表系列谈话抨击美韩 学者：金正恩根本不打算放弃核武器](/articles/voa/1041087.md)
+
 5-2 [中国海军新型核潜艇导弹据称能打到美国全境 美军高官：警惕中国核武发展](/articles/voa/1041088.md)
 
 5-2 [世界新闻自由日：警惕北京对新闻自由采取的“两手策略”](/articles/voa/1041089.md)
@@ -598,6 +600,4 @@
 4-20 [拜登首次对台军售武器据信是帕拉丁型自走炮](/articles/voa/1041385.md)
 
 4-20 [吴宏达去世五周年 追思会缅怀对抗中共劳改的先驱](/articles/voa/1041386.md)
-
-4-20 [“小战狼”视频引热议 分析：“杀气腾腾”的爱国教育](/articles/voa/1041387.md)
 
