--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-3 [美国否认与伊朗达成人质交易](/articles/voa/1041084.md)
+
 5-3 [中共政法委官微发帖讥讽印度疫情，网友愤怒](/articles/voa/1041085.md)
 
 5-3 [印度继续遭受新冠病毒大流行的重创 只有2%的人口接种了新冠疫苗](/articles/voa/1041086.md)
@@ -598,6 +600,4 @@
 4-21 [中国大外宣碰壁 爱沙尼亚大报承认犯错道歉](/articles/voa/1041382.md)
 
 4-20 [温家宝祭母文章遭和谐 只因提到4个字](/articles/voa/1041383.md)
-
-4-20 [中国拟接受接种非中国疫苗人员入境， 胡锡进疫苗言论惹是非](/articles/voa/1041384.md)
 
