--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+5-3 [美国伊朗传出达成换囚协议 白宫幕僚长否认 – 法国国际广播电台 - RFI](/articles/rfi/1030611.md)
+
+5-3 [阿富汗政府军激战塔利班 超过百名叛乱分子死亡 – 法国国际广播电台 - RFI](/articles/rfi/1030612.md)
+
 5-3 [中国在拉美展开一场无声战](/articles/rfi/1030613.md)
 
 5-3 [欧洲寻找快速机制对抗俄罗斯假信息](/articles/rfi/1030614.md)
@@ -596,8 +600,4 @@
 4-29 [赵少康说不选国民党党主席了 韩国瑜谜团大增](/articles/rfi/1030909.md)
 
 4-29 [法国外长：在地缘政治问题上欧洲正在觉醒](/articles/rfi/1030910.md)
-
-4-29 [世卫年会召开前夕全球政要呼吁恢复台湾观察员地位](/articles/rfi/1030911.md)
-
-4-29 [三星李氏家族称将为前掌门人李健熙遗产支付逾百亿美元遗产税](/articles/rfi/1030912.md)
 
