--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+5-3 [新西兰总理说与中国的分歧越来越难以调和](/articles/voa/1041082.md)
+
+5-3 [伊朗最高领袖说伊朗外长在音频泄漏中的言论是“重大错误”](/articles/voa/1041083.md)
+
 5-3 [美国否认与伊朗达成人质交易](/articles/voa/1041084.md)
 
 5-3 [中共政法委官微发帖讥讽印度疫情，网友愤怒](/articles/voa/1041085.md)
@@ -596,8 +600,4 @@
 4-21 [美两党议员提出法案 支持台湾国际参与](/articles/voa/1041380.md)
 
 4-21 [立陶宛不顾中国威胁 拟认定中国在新疆对维吾尔人实施种族灭绝](/articles/voa/1041381.md)
-
-4-21 [中国大外宣碰壁 爱沙尼亚大报承认犯错道歉](/articles/voa/1041382.md)
-
-4-20 [温家宝祭母文章遭和谐 只因提到4个字](/articles/voa/1041383.md)
 
