--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+5-3 [击杀宾拉登十周年 拜登：永不遗忘的一刻 – 法国国际广播电台 - RFI](/articles/rfi/1030607.md)
+
 5-3 [布林肯：中国对内加强打压 对外更具侵略性 – 法国国际广播电台 - RFI](/articles/rfi/1030608.md)
 
 5-3 [安特托昆博伤愈归队轰49分 公鹿力克篮网 – 法国国际广播电台 - RFI](/articles/rfi/1030609.md)
@@ -598,6 +600,4 @@
 4-29 [欧洲议会通过英欧贸易协议 – 法国国际广播电台 - RFI](/articles/rfi/1030905.md)
 
 4-29 [印度单日新增逾3千人病逝 染疫身亡人数破20万大关 – 法国国际广播电台 - RFI](/articles/rfi/1030906.md)
-
-4-29 [德国防长：没有美国，欧洲安全是根本不可能的](/articles/rfi/1030907.md)
 
