--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-3 [赵婷亮眼也刺眼，凸显好莱坞很难在中国“混”下去](/articles/voa/1041076.md)
+
 5-3 [布林肯：北京对内压制对外嚣张导致美中关系陷入困境](/articles/voa/1041077.md)
 
 5-3 [国安法阴霾下香港新闻自由前景黯淡 网媒或成抗衡力量](/articles/voa/1041078.md)
@@ -598,6 +600,4 @@
 4-21 [乍得总统死在前线 总统之子领导军人执政](/articles/voa/1041374.md)
 
 4-21 [中国军方涉嫌对日发动网络攻击](/articles/voa/1041375.md)
-
-4-21 [时事大家谈: 北京“剿杀”下 香港未来在何方？](/articles/voa/1041376.md)
 
