--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,12 @@
 法广
 ------
 
+5-3 [孟加拉小船碰撞砂石船 至少25人丧命 – 法国国际广播电台 - RFI](/articles/rfi/1030604.md)
+
+5-3 [雪梨野火烟霾笼罩  森林减危烧除行动喊卡 – 法国国际广播电台 - RFI](/articles/rfi/1030605.md)
+
+5-3 [偷渡船加州外海翻覆 3死27伤 – 法国国际广播电台 - RFI](/articles/rfi/1030606.md)
+
 5-3 [击杀宾拉登十周年 拜登：永不遗忘的一刻 – 法国国际广播电台 - RFI](/articles/rfi/1030607.md)
 
 5-3 [布林肯：中国对内加强打压 对外更具侵略性 – 法国国际广播电台 - RFI](/articles/rfi/1030608.md)
@@ -594,10 +600,4 @@
 4-29 [法国总统将宣布渐进分阶段走出危机策略](/articles/rfi/1030902.md)
 
 4-29 [俄国：蒲亭告诉印度总理 将提供紧急抗疫援助 – 法国国际广播电台 - RFI](/articles/rfi/1030903.md)
-
-4-29 [德国情报机构将开始监控反防疫示威抗议 – 法国国际广播电台 - RFI](/articles/rfi/1030904.md)
-
-4-29 [欧洲议会通过英欧贸易协议 – 法国国际广播电台 - RFI](/articles/rfi/1030905.md)
-
-4-29 [印度单日新增逾3千人病逝 染疫身亡人数破20万大关 – 法国国际广播电台 - RFI](/articles/rfi/1030906.md)
 
