--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,10 @@
 自由亚洲电台
 ------
 
+5-3 [中共“滨州舰”出现台湾基隆外海 台日军舰并航跟监](/articles/rfa/1045706.md)
+
+5-3 [辽宁号秀肌肉变出洋相  退休将领被追究责任](/articles/rfa/1045707.md)
+
 5-3 [千名缅人台北游行 呼吁国际定性缅甸军政府为恐怖组织](/articles/rfa/1045708.md)
 
 5-2 [印度疫情严重 达赖喇嘛与台湾视讯祈福 流亡藏人捐一日工资](/articles/rfa/1045709.md)
@@ -596,8 +600,4 @@
 3-31 [《2020年度人权报告》出炉  美国将联手国际社会就人权议题制裁中国](/articles/rfa/1046004.md)
 
 3-31 [拜登延续特朗普政策        拟放宽美台官员交流限制](/articles/rfa/1046005.md)
-
-3-31 [前访中东 后邀东南亚 中国欲揽盟友制美？](/articles/rfa/1046006.md)
-
-3-31 [中国战狼外交秀又来了  李杨批特鲁多是走狗败家子](/articles/rfa/1046007.md)
 
