--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,8 @@
 路透
 ------
 
+5-3 [分析：拜登与鲍威尔不约而同 政策重点都强调促进就业](/articles/reuters/1038492.md)
+
 5-3 [花旗上周二在场内买入逾9,709万股农行H股 持好仓比例升至5.14%--联交所资料](/articles/reuters/1038493.md)
 
 5-3 [德国商银与劳工代表接近就裁员计划达成协议--消息人士](/articles/reuters/1038494.md)
@@ -598,6 +600,4 @@
 4-27 [美元兑欧元从八周低位回升 投资者在美联储会议前整固仓位](/articles/reuters/1038790.md)
 
 4-27 [油价下跌 因印度需求风险和OPEC+增产预期](/articles/reuters/1038791.md)
-
-4-27 [钯金刷新纪录高位 金价在美联储会议前持稳](/articles/reuters/1038792.md)
 
