--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,10 @@
 中国数字时代
 ------
 
+5-3 [极昼工作室｜租来的伴娘](/articles/cdt/382996.md)
+
+5-3 [差评｜百度贴吧里，有一批人正在靠躺平对抗内卷](/articles/cdt/382997.md)
+
 5-3 [曹教授｜还要多少条命才能唤醒执法者的人性？](/articles/cdt/382998.md)
 
 5-3 [北青深一度 | 女孩举报老师猥亵之后，征集到了八个“盟友”](/articles/cdt/383008.md)
@@ -596,8 +600,4 @@
 4-2 [情况有点复杂 | 学习淄博好榜样：当一个城市的水污染被曝光后……](/articles/cdt/384236.md)
 
 4-2 [回声 Huisheng | 声援肖美丽，反击性别恐怖主义](/articles/cdt/384237.md)
-
-4-2 [Vicky Xu｜为什么要写维吾尔族社区的事情？要冒多大的风险去写？值不值得？](/articles/cdt/384243.md)
-
-4-2 [【网络民议】BBC记者沙磊调往台湾 网民：你们将再也听不到“抹黑”中国的声音](/articles/cdt/384247.md)
 
