--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+5-3 [世界新闻自由日  香港新闻自由危如累卵](/articles/rfa/1045704.md)
+
 5-3 [战略军港落入中资手上     澳国防部警告取消租约](/articles/rfa/1045705.md)
 
 5-3 [中共“滨州舰”出现台湾基隆外海 台日军舰并航跟监](/articles/rfa/1045706.md)
@@ -598,6 +600,4 @@
 3-31 [中国以 “教育营”方式对付基督徒     多地信徒被关进“教育转化基地”](/articles/rfa/1046002.md)
 
 3-31 [美高官：美日韩应加深经济整合  以抵御对手国家经济胁迫](/articles/rfa/1046003.md)
-
-3-31 [《2020年度人权报告》出炉  美国将联手国际社会就人权议题制裁中国](/articles/rfa/1046004.md)
 
