--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+5-3 [德国之声2021年言论自由奖获得者奥武里: 为无声者抗争](/articles/dw/1042664.md)
+
 5-3 [给亲信镀金交椅？大选前德部长新增高级公务员](/articles/dw/1042665.md)
 
 5-3 [尼日利亚记者Tobore Ovuorie荣获今年度DW言论自由奖](/articles/dw/1042666.md)
@@ -598,6 +600,4 @@
 4-15 [火灾两年后 寻找巴黎圣母院昔日容颜](/articles/dw/1042962.md)
 
 4-15 [巴基斯坦爆发反法抗议 法大使馆建议公民撤离](/articles/dw/1042963.md)
-
-4-15 [中国女权运动再遭打压 运动人士忧“政治污名化”](/articles/dw/1042964.md)
 
