--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+5-3 [中国籍男子“畅通无阻”偷渡台湾 台国防部称海军海巡“确有缺失”](/articles/voa/1041072.md)
+
+5-3 [菲外长发推文抗议爆粗口 要中国滚出争议海域](/articles/voa/1041073.md)
+
 5-3 [澳大利亚据信正考虑收回中国公司对达尔文港99年租约](/articles/voa/1041074.md)
 
 5-3 [七国集团外长在伦敦会晤 主要议题包括中国](/articles/voa/1041075.md)
@@ -596,8 +600,4 @@
 4-21 [白宫要义: 白宫: 与中俄虽意见分歧，气候议题仍可取得共识](/articles/voa/1041370.md)
 
 4-21 [陪审团裁决：被控杀死弗洛伊德的前明尼苏达警察肖文三项罪名均告成立](/articles/voa/1041371.md)
-
-4-21 [一名华裔科研人员因窃取美国医学研究商业秘密被判33月监禁](/articles/voa/1041372.md)
-
-4-21 [欧洲药管局发现强生疫苗可能与血栓有联系](/articles/voa/1041373.md)
 
