--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,12 @@
 德国之声
 ------
 
+5-3 [“长赐号“搁浅事件后续：货主须共同“买单“](/articles/dw/1042661.md)
+
+5-3 [德语媒体：欧洲，请擦亮眼睛！](/articles/dw/1042662.md)
+
+5-3 [捍卫新闻自由——冲击灵魂的照片](/articles/dw/1042663.md)
+
 5-3 [德国之声2021年言论自由奖获得者奥武里: 为无声者抗争](/articles/dw/1042664.md)
 
 5-3 [给亲信镀金交椅？大选前德部长新增高级公务员](/articles/dw/1042665.md)
@@ -594,10 +600,4 @@
 4-15 [日本核废水争议 台湾政府被批“不够硬”](/articles/dw/1042959.md)
 
 4-15 [德语媒体：中国不公平的主场优势](/articles/dw/1042960.md)
-
-4-15 [美国准备对俄实施新制裁  俄方称已做准备](/articles/dw/1042961.md)
-
-4-15 [火灾两年后 寻找巴黎圣母院昔日容颜](/articles/dw/1042962.md)
-
-4-15 [巴基斯坦爆发反法抗议 法大使馆建议公民撤离](/articles/dw/1042963.md)
 
