--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,12 @@
 法广
 ------
 
+5-4 [中国拼命寻找《有用的白痴》证实了软实力极低](/articles/rfi/1030568.md)
+
+5-4 [中国租借达尔文港99年合约或取消 澳洲防长证实正在审查](/articles/rfi/1030569.md)
+
+5-4 [全球经济走向复苏  欧股收高 – 法国国际广播电台 - RFI](/articles/rfi/1030570.md)
+
 5-4 [中国男驾皮艇登岛，吓台湾一跳，防长承认疏失](/articles/rfi/1030571.md)
 
 5-4 [世界新闻自由日：新闻自由同样攸关人民健康与生命 - 要闻解说](/articles/rfi/1030572.md)
@@ -594,10 +600,4 @@
 4-29 [中国通过反食品浪费法， “大胃王”吃播或被罚款10万元](/articles/rfi/1030866.md)
 
 4-29 [广西幼儿园刀砍2死16伤惨案：官方紧急催保安全](/articles/rfi/1030867.md)
-
-4-29 [中国密集升空太空 今发“天和核心舱”首舱](/articles/rfi/1030868.md)
-
-4-29 [黑命关天 拜登吁国会拿出作为 – 法国国际广播电台 - RFI](/articles/rfi/1030869.md)
-
-4-29 [印度疫情失控 美伸援手供一亿美元抗疫物资 – 法国国际广播电台 - RFI](/articles/rfi/1030870.md)
 
