--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,10 @@
 自由亚洲电台
 ------
 
+5-4 [G7外长会邀印太国家出席     美英要中俄违反人权付出代价](/articles/rfa/1045699.md)
+
+5-4 [加拿大总理特鲁多再度挺台湾参加世卫大会](/articles/rfa/1045700.md)
+
 5-3 [陆男称驾艇横穿台湾海峡“投奔自由”   引舆论质疑](/articles/rfa/1045701.md)
 
 5-3 [美国驻法大使会见台湾代表 中国跳脚反对](/articles/rfa/1045702.md)
@@ -596,8 +600,4 @@
 3-31 [知名时政论坛“猫眼看人”遭关闭](/articles/rfa/1045997.md)
 
 3-31 [台湾增购美制爱国者导弹  提高防卫能力](/articles/rfa/1045998.md)
-
-3-31 [中国动漫潜入台湾成统战先锋？立委吁政府补破网](/articles/rfa/1045999.md)
-
-3-31 [疫情溯源报告成众矢之的  世卫被批“两面不是人”](/articles/rfa/1046000.md)
 
