--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+5-4 [从乒乓外交到战狼外交 - 美国专栏](/articles/rfi/1030567.md)
+
 5-4 [中国拼命寻找《有用的白痴》证实了软实力极低](/articles/rfi/1030568.md)
 
 5-4 [中国租借达尔文港99年合约或取消 澳洲防长证实正在审查](/articles/rfi/1030569.md)
@@ -598,6 +600,4 @@
 4-29 [酒吧等娱乐场所今重开 员工顾客须打针 接种率仅13% 业界难受惠亦未必可谷针](/articles/rfi/1030865.md)
 
 4-29 [中国通过反食品浪费法， “大胃王”吃播或被罚款10万元](/articles/rfi/1030866.md)
-
-4-29 [广西幼儿园刀砍2死16伤惨案：官方紧急催保安全](/articles/rfi/1030867.md)
 
