--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+5-4 [香港支联会国安法下首次洗刷国殇之柱 冀以行动战胜恐惧延续六四烛光](/articles/voa/1041065.md)
+
+5-4 [时事大家谈: 美中对抗：大国争霸还是制度较量？](/articles/voa/1041066.md)
+
 5-4 [港版国安法损害香港新闻自由 香港记协年度新闻自由指数跌至8年新低](/articles/voa/1041067.md)
 
 5-4 [台积电称6月底前或能满足市场最低汽车芯片需求](/articles/voa/1041068.md)
@@ -596,8 +600,4 @@
 4-21 [拜登将在地球日峰会直击气候变化](/articles/voa/1041363.md)
 
 4-21 [国际特赦：2020年全球死刑进一步减少 中国仍是处死人最多国家](/articles/voa/1041364.md)
-
-4-21 [美军将领告诉议员：撤离阿富汗会让反恐行动“极其困难”](/articles/voa/1041365.md)
-
-4-21 [台湾外交官：美台需防中国取得太平洋战略优势削弱地区民主](/articles/voa/1041366.md)
 
