--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+5-4 [三联生活周刊 | 15岁到28岁，我的黄金时代都在工厂流水线上](/articles/cdt/382990.md)
+
 5-4 [科技日报 | 被体检否决的残障海归硕士：为什么我不能当老师？](/articles/cdt/382991.md)
 
 5-3 [极昼工作室｜租来的伴娘](/articles/cdt/382996.md)
@@ -598,6 +600,4 @@
 4-2 [立场新闻 | 香港法庭如何审判一场和平示威？](/articles/cdt/384231.md)
 
 4-2 [端传媒 | 中大半山腰，一个中国研究圣地的死亡（节选）](/articles/cdt/384234.md)
-
-4-2 [情况有点复杂 | 学习淄博好榜样：当一个城市的水污染被曝光后……](/articles/cdt/384236.md)
 
