--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+5-4 [拜登政府为印度新冠危机提供医用物资](/articles/voa/1041055.md)
+
+5-4 [VOA连线(文灏): 世界新闻自由日: 中国在海内外加强信息操纵](/articles/voa/1041056.md)
+
 5-4 [阿里巴巴蔡崇信、雅虎杨致远等人捐款 抗击对亚裔仇恨歧视](/articles/voa/1041057.md)
 
 5-4 [美国呼吁朝鲜进行“外交接触” 七国集团外长会议讨论中国议题](/articles/voa/1041058.md)
@@ -596,8 +600,4 @@
 4-22 [印度单日新冠感染人数持续刷新 局面失控堪比“海啸”](/articles/voa/1041353.md)
 
 4-22 [菅义伟称日本不会军事介入台海冲突](/articles/voa/1041354.md)
-
-4-22 [时事大家谈: 温家宝为何要发声？为何被禁言？](/articles/voa/1041355.md)
-
-4-21 [拜登与习近平不会在气候峰会上进行双边会谈](/articles/voa/1041356.md)
 
