--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,16 @@
 路透
 ------
 
+5-4 [富达投资已将其在蚂蚁集团的持股估值削减一半--华尔街日报](/articles/reuters/1038487.md)
+
+5-4 [美元受制造业数据拖累下滑 以太币创新高](/articles/reuters/1038488.md)
+
+5-4 [“重启”股提振美股标普500指数和道指收高 纳指受科技股拖累下跌](/articles/reuters/1038489.md)
+
+5-4 [油价上扬逾1% 因需求改善希望提振市场信心](/articles/reuters/1038490.md)
+
+5-4 [金价涨逾1% 受美元和美国公债收益率回落带动](/articles/reuters/1038491.md)
+
 5-3 [分析：拜登与鲍威尔不约而同 政策重点都强调促进就业](/articles/reuters/1038492.md)
 
 5-3 [花旗上周二在场内买入逾9,709万股农行H股 持好仓比例升至5.14%--联交所资料](/articles/reuters/1038493.md)
@@ -590,14 +600,4 @@
 4-27 [欧盟将在5月5日就具有国家支持的外资买家公布应对草案](/articles/reuters/1038785.md)
 
 4-27 [中国华融宣布完成两只ABS收益分配 文件显示分配资金逾70亿元](/articles/reuters/1038786.md)
-
-4-27 [路透测算的人民币中间价料贬至6.4930元附近 美元从八周低位回升](/articles/reuters/1038787.md)
-
-4-27 [药明生物遭大股东减持约116亿港元股份 持股比例将降至17.44%](/articles/reuters/1038788.md)
-
-4-27 [美股标普500指数和纳指双双刷新收盘纪录 关注本周科技巨头发布财报](/articles/reuters/1038789.md)
-
-4-27 [美元兑欧元从八周低位回升 投资者在美联储会议前整固仓位](/articles/reuters/1038790.md)
-
-4-27 [油价下跌 因印度需求风险和OPEC+增产预期](/articles/reuters/1038791.md)
 
