--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+5-4 [比尔盖兹宣布离婚 震撼慈善界](/articles/dw/1042655.md)
+
+5-4 [贝多芬《D大调小提琴协奏曲》](/articles/dw/1042656.md)
+
 5-4 [布林肯会王毅 中美联合国安理会角力](/articles/dw/1042657.md)
 
 5-4 [中国的“新丝绸之路”走不通了？](/articles/dw/1042658.md)
@@ -596,8 +600,4 @@
 4-16 [818案宣判： 黎智英被判1年 李柱铭获刑11个月、缓刑两年](/articles/dw/1042953.md)
 
 4-16 [818流水集会案判刑日 何俊仁盼港人坚守信念](/articles/dw/1042954.md)
-
-4-16 [华为惨剧将重演？美鹰派吁限制出售芯片设计工具给中国](/articles/dw/1042955.md)
-
-4-16 [美日峰会聚焦中国  涉台联合声明引关注](/articles/dw/1042956.md)
 
