--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,8 @@
 路透
 ------
 
+5-4 [分析：股神巴菲特光环褪色 伯克希尔部分股东信心动摇](/articles/reuters/1038469.md)
+
 5-4 [综述：美国4月制造业活动增速放缓 受累于需求高涨之际的供应链瓶颈](/articles/reuters/1038470.md)
 
 5-4 [亚洲股市微升 投资者看向经济复苏迹象](/articles/reuters/1038471.md)
@@ -598,6 +600,4 @@
 4-27 [特斯拉在发生车展抗议事件后向中国车主保证解决问题](/articles/reuters/1038767.md)
 
 4-27 [OPEC+维持今年全球石油需求增长预测不变 但担心疫情反扑--消息](/articles/reuters/1038768.md)
-
-4-27 [侃爷的Yeezy运动鞋在拍卖中以180万美元成交 创世界纪录--苏富比](/articles/reuters/1038769.md)
 
