--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-4 [香港推进禁止假新闻立法 被指真实目的是进一步打压自由](/articles/voa/1041051.md)
+
 5-4 [印尼裔基督徒和穆斯林共享礼拜空间](/articles/voa/1041052.md)
 
 5-4 [特朗普称2020年大选失败是“大谎言”](/articles/voa/1041053.md)
@@ -598,6 +600,4 @@
 4-22 [香港世界新闻自由指数续排名80 记协指国安法下寒蝉效应恶化](/articles/voa/1041349.md)
 
 4-22 [TikTok在英国被控非法获取儿童个人信息 或被罚数十亿美元](/articles/voa/1041350.md)
-
-4-22 [报告称中国和缅甸等国严重侵犯宗教自由](/articles/voa/1041351.md)
 
