--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+5-4 [习近平评估国际形势 : “时与势在中国一边”](/articles/rfa/1045694.md)
+
 5-4 [专访：种族灭绝是对新疆问题的误诊？](/articles/rfa/1045695.md)
 
 5-4 [“一带一路”背后中国劳工的血泪：强迫劳动 惨死他乡](/articles/rfa/1045696.md)
@@ -598,6 +600,4 @@
 4-1 [“新疆棉”持续发酵： BBC驻华记者迁台   H&M关20家店](/articles/rfa/1045992.md)
 
 4-1 [中国房地产调控高压持续　三月份67城房价下跌](/articles/rfa/1045993.md)
-
-4-1 [研究显示：中共利用国际社媒  升级虚假宣传](/articles/rfa/1045994.md)
 
