--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+5-4 [客座评论：如果马克思活到今天？](/articles/dw/1042653.md)
+
 5-4 [又一民主派人士流亡 李轩朗：香港是唯一的家](/articles/dw/1042654.md)
 
 5-4 [比尔盖兹宣布离婚 震撼慈善界](/articles/dw/1042655.md)
@@ -598,6 +600,4 @@
 4-16 [太鲁阁号出轨案侦查终结  工地主任遭过失致死罪起诉](/articles/dw/1042951.md)
 
 4-16 [记者镜头下的2020：世界新闻摄影奖获奖作品](/articles/dw/1042952.md)
-
-4-16 [818案宣判： 黎智英被判1年 李柱铭获刑11个月、缓刑两年](/articles/dw/1042953.md)
 
