--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-4 [中共百周年党庆前夕 红色旅游热潮席卷全国](/articles/voa/1041049.md)
+
 5-4 [五角大楼宣布防长奥斯汀将出席香格里拉对话会](/articles/voa/1041050.md)
 
 5-4 [香港推进禁止假新闻立法 被指真实目的是进一步打压自由](/articles/voa/1041051.md)
@@ -598,6 +600,4 @@
 4-22 [印尼海军潜艇失联 请求澳大利亚、新加坡和印度协助搜寻](/articles/voa/1041347.md)
 
 4-22 [为欧洲智库仗义执言的华盛顿智库遭中国封禁](/articles/voa/1041348.md)
-
-4-22 [香港世界新闻自由指数续排名80 记协指国安法下寒蝉效应恶化](/articles/voa/1041349.md)
 
