--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+5-4 [沙乌地阿美石油公司Q1获利跃增30% – 法国国际广播电台 - RFI](/articles/rfi/1030512.md)
+
+5-4 [新冠病毒溯源：实验室泄漏假说重起 - 法国报纸摘要](/articles/rfi/1030513.md)
+
 5-4 [因报道疫情而身陷囹圄的公民记者张展荣获比利时自由大学言论自由荣誉奖](/articles/rfi/1030514.md)
 
 5-4 [持儿童色情图片被捕 纽西兰8旬富商自愿放弃爵位 – 法国国际广播电台 - RFI](/articles/rfi/1030515.md)
@@ -596,8 +600,4 @@
 4-30 [美国国务卿布林肯谈美国对中国大外宣媒体待遇不变](/articles/rfi/1030810.md)
 
 4-30 [法国印度变种病毒第一例](/articles/rfi/1030811.md)
-
-4-30 [铜材市场需求强劲 价格逼近历史最高](/articles/rfi/1030812.md)
-
-4-30 [法国将分“四个阶段”逐步解禁](/articles/rfi/1030813.md)
 
