--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-4 [七国集团外长面对面会谈 讨论最紧迫地缘政治挑战](/articles/voa/1041047.md)
+
 5-4 [拱手让出数据和市占率？蚂蚁助人行推数字人民币](/articles/voa/1041048.md)
 
 5-4 [中共百周年党庆前夕 红色旅游热潮席卷全国](/articles/voa/1041049.md)
@@ -598,6 +600,4 @@
 4-22 [拜登总统提名的新印太司令获参议院批准](/articles/voa/1041345.md)
 
 4-22 [美国际宗教自由委员会：中国宗教自由继续恶化，建议政府不派官员出席北京冬奥](/articles/voa/1041346.md)
-
-4-22 [印尼海军潜艇失联 请求澳大利亚、新加坡和印度协助搜寻](/articles/voa/1041347.md)
 
