--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-4 [蔡英文获“约翰·麦凯恩公共服务领袖奖” 其领导能力获肯定](/articles/voa/1041046.md)
+
 5-4 [七国集团外长面对面会谈 讨论最紧迫地缘政治挑战](/articles/voa/1041047.md)
 
 5-4 [拱手让出数据和市占率？蚂蚁助人行推数字人民币](/articles/voa/1041048.md)
@@ -598,6 +600,4 @@
 4-22 [澳大利亚取消维多利亚州政府的“一带一路”协议](/articles/voa/1041344.md)
 
 4-22 [拜登总统提名的新印太司令获参议院批准](/articles/voa/1041345.md)
-
-4-22 [美国际宗教自由委员会：中国宗教自由继续恶化，建议政府不派官员出席北京冬奥](/articles/voa/1041346.md)
 
