--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+5-4 [AIT：美台资安合作步伐一致  蔡英文：台湾资安已是国际品牌](/articles/rfa/1045689.md)
+
 5-4 [摆脱北京干扰  麦凯恩奖颁给台湾总统蔡英文](/articles/rfa/1045690.md)
 
 5-4 [自由之家关注亚太地区自由度下降 台湾“疫”军突起](/articles/rfa/1045691.md)
@@ -598,6 +600,4 @@
 4-1 [中国疫苗接种逾1.14亿剂次   强制接种收效接种指标曝光](/articles/rfa/1045987.md)
 
 4-1 [“民主之父”李柱铭被定罪    多年战友形容 “弄死香港第一枪”](/articles/rfa/1045988.md)
-
-4-1 [上海率先 “新疆化”？ 外省人入沪逾24小时须登记](/articles/rfa/1045989.md)
 
