--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-5 [香港问题专家谈港民自由遭全面打压](/articles/voa/1041043.md)
+
 5-4 [欧盟药监机构开始审查中国科兴疫苗](/articles/voa/1041044.md)
 
 5-4 [中国主持安理会会议，布林肯称与中国对话“艰难”](/articles/voa/1041045.md)
@@ -598,6 +600,4 @@
 4-22 [欧盟宣布加强人工智能管理的建议措施](/articles/voa/1041341.md)
 
 4-22 [美司法部宣布对明尼阿波利斯警察局警务做法展开调查](/articles/voa/1041342.md)
-
-4-22 [日本首相菅义伟取消访问印度和菲律宾计划](/articles/voa/1041343.md)
 
