--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+5-5 [G7外长会议捍卫国际秩序  推动多边体系应对中俄](/articles/rfa/1045687.md)
+
 5-4 [常玮平疑遭酷刑引起国际关注  家属拟提诉讼不获受理](/articles/rfa/1045688.md)
 
 5-4 [AIT：美台资安合作步伐一致  蔡英文：台湾资安已是国际品牌](/articles/rfa/1045689.md)
@@ -598,6 +600,4 @@
 4-1 [香港民主人士李柱铭、黎智英等7人非法集结罪成](/articles/rfa/1045985.md)
 
 4-1 [中方急找演员？新疆发布会教培中心结业员是复旦毕业生](/articles/rfa/1045986.md)
-
-4-1 [中国疫苗接种逾1.14亿剂次   强制接种收效接种指标曝光](/articles/rfa/1045987.md)
 
