--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+5-5 [美国三月份贸易逆差创新高](/articles/voa/1041035.md)
+
+5-5 [日本抗议中国调查船进入日本专属经济区活动](/articles/voa/1041036.md)
+
+5-5 [欧盟贸易主管：推动批准中欧投资协定的努力已经暂停](/articles/voa/1041037.md)
+
 5-5 [时事大家谈: 中国整肃互联网金融，防范风险还是强化国有垄断？](/articles/voa/1041038.md)
 
 5-5 [香港警方指民阵涉违反社团条例 成员质疑有政治目的或铺排取缔](/articles/voa/1041039.md)
@@ -594,10 +600,4 @@
 4-22 [谴责北京种族灭绝行为 美众院外委会通过两项涉新疆人权议案](/articles/voa/1041333.md)
 
 4-22 [中国强劲经济数据的背后：增长是否可持续？](/articles/voa/1041334.md)
-
-4-22 [印度22名新冠病人死于氧气供应中断](/articles/voa/1041335.md)
-
-4-22 [美太空司令：中国太空力量对美国构成步步进逼的挑战](/articles/voa/1041336.md)
-
-4-22 [“中国行动计划”最新起诉：数学教授被控获取美联邦研究资金同时隐瞒与中国关系](/articles/voa/1041337.md)
 
