--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-5 [日本加大菲律宾军援力度，首次提供自卫队装备](/articles/voa/1041034.md)
+
 5-5 [美国三月份贸易逆差创新高](/articles/voa/1041035.md)
 
 5-5 [日本抗议中国调查船进入日本专属经济区活动](/articles/voa/1041036.md)
@@ -598,6 +600,4 @@
 4-22 [VOA专访：巴基斯坦总统说，他的国家不想成为美国在阿富汗的反恐行动基地](/articles/voa/1041332.md)
 
 4-22 [谴责北京种族灭绝行为 美众院外委会通过两项涉新疆人权议案](/articles/voa/1041333.md)
-
-4-22 [中国强劲经济数据的背后：增长是否可持续？](/articles/voa/1041334.md)
 
