--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-5 [布林肯：美国不是要遏制中国 但要捍卫基于规则的国际秩序](/articles/voa/1041033.md)
+
 5-5 [日本加大菲律宾军援力度，首次提供自卫队装备](/articles/voa/1041034.md)
 
 5-5 [美国三月份贸易逆差创新高](/articles/voa/1041035.md)
@@ -598,6 +600,4 @@
 4-22 [新冠病毒对孕妇和胎儿的影响报告](/articles/voa/1041331.md)
 
 4-22 [VOA专访：巴基斯坦总统说，他的国家不想成为美国在阿富汗的反恐行动基地](/articles/voa/1041332.md)
-
-4-22 [谴责北京种族灭绝行为 美众院外委会通过两项涉新疆人权议案](/articles/voa/1041333.md)
 
