--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+5-5 [德国之声 | 长平观察：“胡锡进这种人比敌人更加有害！”](/articles/cdt/382967.md)
+
 5-4 [中产生活观察｜“死了都要罚”：如何做一个组织人？](/articles/cdt/382970.md)
 
 5-4 [【旧闻重温】观世相｜五四青年节：“小粉红”崛起](/articles/cdt/382972.md)
@@ -598,6 +600,4 @@
 4-3 [【中国哭墙】每到这里来看一看，好像就又能原谅这个世界了（3月29-4月3日，2021年）](/articles/cdt/384191.md)
 
 4-3 [【图说天朝】“疯狂的年代，清醒的极少数人如何渡过”](/articles/cdt/384209.md)
-
-4-3 [【CDT敏感词周报】第十八期：许秀中、李杨骂人、陈秋实获释](/articles/cdt/384210.md)
 
