--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+5-5 [VOA连线(张蓉湘): 美布局非洲 外交斡旋提格雷危机 同时关注中国](/articles/voa/1041031.md)
+
+5-5 [白宫要义: 拜登设定独立纪念日为完成第二阶段疫苗接种目标](/articles/voa/1041032.md)
+
 5-5 [布林肯：美国不是要遏制中国 但要捍卫基于规则的国际秩序](/articles/voa/1041033.md)
 
 5-5 [日本加大菲律宾军援力度，首次提供自卫队装备](/articles/voa/1041034.md)
@@ -596,8 +600,4 @@
 4-22 [巴拉圭总统：不接受中国疫苗外交“勒索”](/articles/voa/1041329.md)
 
 4-22 [新冠大流行重创人们心理健康](/articles/voa/1041330.md)
-
-4-22 [新冠病毒对孕妇和胎儿的影响报告](/articles/voa/1041331.md)
-
-4-22 [VOA专访：巴基斯坦总统说，他的国家不想成为美国在阿富汗的反恐行动基地](/articles/voa/1041332.md)
 
