--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+5-5 [七国集团外长伦敦会晤，主要讨论俄罗斯和中国问题](/articles/voa/1041029.md)
+
+5-5 [共和党众议员切尼因抨击特朗普而遭到党内批评](/articles/voa/1041030.md)
+
 5-5 [VOA连线(张蓉湘): 美布局非洲 外交斡旋提格雷危机 同时关注中国](/articles/voa/1041031.md)
 
 5-5 [白宫要义: 拜登设定独立纪念日为完成第二阶段疫苗接种目标](/articles/voa/1041032.md)
@@ -596,8 +600,4 @@
 4-22 [与中国全面竞争：美参院跨党派合作推进外交与技术投资两大法案](/articles/voa/1041327.md)
 
 4-22 [美国老人欢呼打过疫苗有如终于出狱](/articles/voa/1041328.md)
-
-4-22 [巴拉圭总统：不接受中国疫苗外交“勒索”](/articles/voa/1041329.md)
-
-4-22 [新冠大流行重创人们心理健康](/articles/voa/1041330.md)
 
