--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+5-5 [【CDT推荐】本周推荐媒体](/articles/cdt/382962.md)
+
 5-5 [美国之音 | 世界新闻自由日：中国被评为新闻和言论自由的最大敌人](/articles/cdt/382964.md)
 
 5-5 [德国之声 | 长平观察：“胡锡进这种人比敌人更加有害！”](/articles/cdt/382967.md)
@@ -598,6 +600,4 @@
 4-3 [德国之声 | 长平观察：暴力受害者群体为何成为隐形人](/articles/cdt/384177.md)
 
 4-3 [德馨文社 | 上海人口管理新规惹争议 官方回应民不买账](/articles/cdt/384179.md)
-
-4-3 [【中国哭墙】每到这里来看一看，好像就又能原谅这个世界了（3月29-4月3日，2021年）](/articles/cdt/384191.md)
 
