--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+5-5 [外国部队开始撤军，阿富汗人担心塔利班卷土重来](/articles/voa/1041027.md)
+
+5-5 [人权团体肯定拜登政府推动人权 呼吁采取更多行动](/articles/voa/1041028.md)
+
 5-5 [七国集团外长伦敦会晤，主要讨论俄罗斯和中国问题](/articles/voa/1041029.md)
 
 5-5 [共和党众议员切尼因抨击特朗普而遭到党内批评](/articles/voa/1041030.md)
@@ -596,8 +600,4 @@
 4-22 [清真寺为斋月期间祈祷人数设限](/articles/voa/1041325.md)
 
 4-22 [涉习家泄密专案二审即将宣判 牛腾宇母亲呼唤公平正义](/articles/voa/1041326.md)
-
-4-22 [与中国全面竞争：美参院跨党派合作推进外交与技术投资两大法案](/articles/voa/1041327.md)
-
-4-22 [美国老人欢呼打过疫苗有如终于出狱](/articles/voa/1041328.md)
 
