--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+5-5 [白宫印太事务官：不会声明保卫台湾](/articles/dw/1042638.md)
+
 5-5 [欧中关系恶化 投资协议批准暂无望](/articles/dw/1042639.md)
 
 5-4 [德国外长马斯呼吁西方七国共同制定对华战略](/articles/dw/1042640.md)
@@ -598,6 +600,4 @@
 4-17 [中国茅台神话的背后](/articles/dw/1042936.md)
 
 4-17 [美日发表联合声明 强调台海稳定重要性](/articles/dw/1042937.md)
-
-4-17 [緬甸瀕臨內戰：日本在譴責聲下堤防中國插手支援？](/articles/dw/1042938.md)
 
