--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+5-5 [坎贝尔：美若在台湾问题上实行“战略清晰”有“重大不利面”](/articles/voa/1041025.md)
+
+5-5 [缅甸驻联合国大使呼吁美英联合施压安理会制裁军政府](/articles/voa/1041026.md)
+
 5-5 [外国部队开始撤军，阿富汗人担心塔利班卷土重来](/articles/voa/1041027.md)
 
 5-5 [人权团体肯定拜登政府推动人权 呼吁采取更多行动](/articles/voa/1041028.md)
@@ -596,8 +600,4 @@
 4-22 [巴基斯坦一家酒店发生炸弹爆炸 疑针对中国代表团](/articles/voa/1041323.md)
 
 4-22 [加拿大安全情报局：外来渗透急剧增加，中俄是主角](/articles/voa/1041324.md)
-
-4-22 [清真寺为斋月期间祈祷人数设限](/articles/voa/1041325.md)
-
-4-22 [涉习家泄密专案二审即将宣判 牛腾宇母亲呼唤公平正义](/articles/voa/1041326.md)
 
