--- a/lists/路透.md
+++ b/lists/路透.md
@@ -1,6 +1,8 @@
 路透
 ------
 
+5-5 [独家：波音737MAX因为电气接地问题面临新障碍--消息人士](/articles/reuters/1038445.md)
+
 5-5 [中国成为古巴雪茄最大市场 西班牙退居次席](/articles/reuters/1038446.md)
 
 5-5 [欧元区负收益率公债规模占总市场规模的比例降至近一年来最低--Tradeweb](/articles/reuters/1038447.md)
@@ -598,6 +600,4 @@
 4-27 [收盘续创逾七周新高 美指走向存分歧市场倾向做多人民币](/articles/reuters/1038743.md)
 
 4-27 [中国对包括印度的南亚国家参加抗击新冠会议持开放态度--外交部](/articles/reuters/1038744.md)
-
-4-27 [中国外交部称日本外交蓝皮书渲染中国威胁 中方坚决反对并提出严正交涉](/articles/reuters/1038745.md)
 
