--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-5 [现代聊斋余少镭｜大宋王朝的“五四青年”，到底打了谁的脸](/articles/cdt/382952.md)
 
+5-5 [【网络民议】丁太升为印度疫情发声遭炸号  网友：错在说了人话](/articles/cdt/382956.md)
+
 5-5 [上观新闻｜成都惊现“宠物盲盒”160余只动物中4只死亡 中通致歉](/articles/cdt/382961.md)
 
 5-5 [【CDT推荐】本周推荐媒体](/articles/cdt/382962.md)
@@ -598,6 +600,4 @@
 4-3 [鱼眼观察 | 又升级了：不打疫苗，开除！](/articles/cdt/384172.md)
 
 4-4 [阿雷雷 | 我眼中的女权主义者——不可思议的肖美丽](/articles/cdt/384173.md)
-
-4-3 [补果君 | 今天，愚人节，我被炸的两个账号拿回来了](/articles/cdt/384176.md)
 
