--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-5 [蔡英文获“麦凯恩公共服务领袖奖” 中国要求“立即取消错误决定”](/articles/voa/1041024.md)
+
 5-5 [坎贝尔：美若在台湾问题上实行“战略清晰”有“重大不利面”](/articles/voa/1041025.md)
 
 5-5 [缅甸驻联合国大使呼吁美英联合施压安理会制裁军政府](/articles/voa/1041026.md)
@@ -598,6 +600,4 @@
 4-22 [拜登与特鲁多通话 再度谴责中国“任意拘押”两名加拿大人](/articles/voa/1041322.md)
 
 4-22 [巴基斯坦一家酒店发生炸弹爆炸 疑针对中国代表团](/articles/voa/1041323.md)
-
-4-22 [加拿大安全情报局：外来渗透急剧增加，中俄是主角](/articles/voa/1041324.md)
 
