--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+5-5 [北京、贵阳教会信徒被拘  云南少数民族教会被关闭](/articles/rfa/1045681.md)
+
 5-5 [中国大搞疫苗外交   拉美成美中较量新战场](/articles/rfa/1045682.md)
 
 5-5 [维吾尔人在纪录片里忏悔     家属喊冤](/articles/rfa/1045683.md)
@@ -598,6 +600,4 @@
 4-2 [加拿大军舰行经南海  中方表达不满](/articles/rfa/1045979.md)
 
 4-2 [声援王全璋案入狱  天津人权捍卫者张建中刑满获释](/articles/rfa/1045980.md)
-
-4-2 [习近平再谈红色资源   意在重释党史？](/articles/rfa/1045981.md)
 
