--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+5-5 [【404文库】中式没品笑话百科｜这些“阴阳怪气”的话，是哪位“公知”说的？](/articles/cdt/382931.md)
+
 5-5 [【网络民议】青年们不在五四这天睡觉，难道要上街吗？](/articles/cdt/382938.md)
 
 5-5 [现代聊斋余少镭｜大宋王朝的“五四青年”，到底打了谁的脸](/articles/cdt/382952.md)
@@ -598,6 +600,4 @@
 4-3 [【网络民议】H&M因“问题地图”遭当局约谈    网民：欲加之罪](/articles/cdt/384168.md)
 
 4-3 [风传媒 |   揭新疆维族惨况遭抹黑“女汉奸”26岁前记者许秀中：我会写到“教培中心”关门为止](/articles/cdt/384170.md)
-
-4-3 [鱼眼观察 | 又升级了：不打疫苗，开除！](/articles/cdt/384172.md)
 
