--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+5-5 [美国印太事务官坎贝尔主张维持“战略模糊”](/articles/rfa/1045680.md)
+
 5-5 [北京、贵阳教会信徒被拘  云南少数民族教会被关闭](/articles/rfa/1045681.md)
 
 5-5 [中国大搞疫苗外交   拉美成美中较量新战场](/articles/rfa/1045682.md)
@@ -598,6 +600,4 @@
 4-2 [美暂不取消对华关税   人权与贸易能分开吗？](/articles/rfa/1045978.md)
 
 4-2 [加拿大军舰行经南海  中方表达不满](/articles/rfa/1045979.md)
-
-4-2 [声援王全璋案入狱  天津人权捍卫者张建中刑满获释](/articles/rfa/1045980.md)
 
