--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-5 [美官员称美日将合作维持台海现状](/articles/voa/1041020.md)
+
 5-5 [专访澳大利亚资深记者沃克：谈中澳关系与战狼和人质外交](/articles/voa/1041021.md)
 
 5-5 [中国长征5B号火箭残骸将失控坠落地面 美太空司令部：随时跟踪并发出预警](/articles/voa/1041022.md)
@@ -598,6 +600,4 @@
 4-22 [“三爱”高于信仰？ 宗教生存空间进一步缩紧](/articles/voa/1041318.md)
 
 4-22 [拜登提名前助理和中国通出任国防部印太事物助理部长](/articles/voa/1041319.md)
-
-4-22 [台湾开始为2050实现零排放制定计划](/articles/voa/1041320.md)
 
