--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-5 [台湾卫福部长发文美刊 呼吁接纳台湾参与世卫大会](/articles/voa/1041019.md)
+
 5-5 [美官员称美日将合作维持台海现状](/articles/voa/1041020.md)
 
 5-5 [专访澳大利亚资深记者沃克：谈中澳关系与战狼和人质外交](/articles/voa/1041021.md)
@@ -598,6 +600,4 @@
 4-22 [德国警告说，与中国脱钩将是错误的](/articles/voa/1041317.md)
 
 4-22 [“三爱”高于信仰？ 宗教生存空间进一步缩紧](/articles/voa/1041318.md)
-
-4-22 [拜登提名前助理和中国通出任国防部印太事物助理部长](/articles/voa/1041319.md)
 
