--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+5-5 [印度台商捐15台储氧槽   驻台代表：印度有决心抗疫](/articles/rfa/1045677.md)
+
 5-5 [被指侵犯电视机用户私隐  中国创维停止传送后台数据](/articles/rfa/1045678.md)
 
 5-5 [才笑人就出包！长征五号火箭體残骸失控  南北纬40度内陷危机](/articles/rfa/1045679.md)
@@ -598,6 +600,4 @@
 4-2 [广东潮州庵埠镇整治无牌摩托车  警察闯入民宅抢车](/articles/rfa/1045975.md)
 
 4-2 [洛杉矶中领馆外爆发示威 抗议中国干涉缅甸政局](/articles/rfa/1045976.md)
-
-4-2 [外媒是改善中国形象一环？ 华春莹再飙BBC](/articles/rfa/1045977.md)
 
