--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,10 @@
 自由亚洲电台
 ------
 
+5-6 [欧盟: 批准欧中投资协定取决于政治形势发展](/articles/rfa/1045675.md)
+
+5-6 [中国影响渗透加拿大学术界  加拿大官方提出警告](/articles/rfa/1045676.md)
+
 5-5 [印度台商捐15台储氧槽   驻台代表：印度有决心抗疫](/articles/rfa/1045677.md)
 
 5-5 [被指侵犯电视机用户私隐  中国创维停止传送后台数据](/articles/rfa/1045678.md)
@@ -596,8 +600,4 @@
 4-2 [云南瑞丽爆发新一波疫情    中缅边境疫情防控难度高](/articles/rfa/1045973.md)
 
 4-2 [解放军机一天20架次施压台湾 台国安局长：他们来试天气](/articles/rfa/1045974.md)
-
-4-2 [广东潮州庵埠镇整治无牌摩托车  警察闯入民宅抢车](/articles/rfa/1045975.md)
-
-4-2 [洛杉矶中领馆外爆发示威 抗议中国干涉缅甸政局](/articles/rfa/1045976.md)
 
