--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,16 @@
 法广
 ------
 
+5-6 [G7外长会议公报呼吁中国在新疆香港尊重人权](/articles/rfi/1030432.md)
+
+5-6 [美国：支持新冠疫苗知识产权豁免的提议](/articles/rfi/1030433.md)
+
+5-6 [欧盟提出新法阻止获补贴企业并购 意在防堵中国](/articles/rfi/1030434.md)
+
+5-6 [土耳其外长准备访问沙特修补双边关系](/articles/rfi/1030435.md)
+
+5-6 [法国世界报；采取零新冠策略的国家比要和新冠病毒共存的国家胜算 - 法国世界报](/articles/rfi/1030436.md)
+
 5-6 [香港电台开始下架 网民动员备份 保护历史](/articles/rfi/1030437.md)
 
 5-6 [印度学生在欧洲：八千公里外的担忧](/articles/rfi/1030438.md)
@@ -590,14 +600,4 @@
 5-1 [瞄准红土首冠  大&amp;#22338;直美马德里网赛首轮获胜 – 法国国际广播电台 - RFI](/articles/rfi/1030730.md)
 
 5-1 [白宫易主后，拜登政府国防部如何看待印太战略？ - 印太纵览](/articles/rfi/1030731.md)
-
-5-1 [萨赫勒遇害三欧洲人遗体运抵西班牙](/articles/rfi/1030732.md)
-
-5-1 [美国再次呼吁WHA  邀请台湾与会 – 法国国际广播电台 - RFI](/articles/rfi/1030733.md)
-
-4-30 [腾讯违反“反垄断法”罚款公布了](/articles/rfi/1030734.md)
-
-4-30 [乌俄边界紧张 布林肯5月访乌克兰力挺基辅 – 法国国际广播电台 - RFI](/articles/rfi/1030735.md)
-
-4-30 [欧盟正式指控苹果  违反串流音乐市场竞争 – 法国国际广播电台 - RFI](/articles/rfi/1030736.md)
 
