--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,12 @@
 自由亚洲电台
 ------
 
+5-6 [一百六十余只猫狗被密封运输   宠物盲盒引众怒](/articles/rfa/1045671.md)
+
+5-6 [世卫评估中国疫苗：数据不够 信心不足](/articles/rfa/1045672.md)
+
+5-6 [中国力推“近北极国家”    令美欧警惕](/articles/rfa/1045673.md)
+
 5-6 [因探望江天勇 多人被盘查   邢望力被行拘](/articles/rfa/1045674.md)
 
 5-6 [欧盟: 批准欧中投资协定取决于政治形势发展](/articles/rfa/1045675.md)
@@ -594,10 +600,4 @@
 4-3 [专访北加本地居民凯文·格兰特：“我把香港放在心上”](/articles/rfa/1045969.md)
 
 4-3 [孟晚舟律师称她未被加拿大任意拘留    控方称美国没有违反国际法](/articles/rfa/1045970.md)
-
-4-3 [中国创造虚拟记者却骚扰真实记者 遭欧盟谴责](/articles/rfa/1045971.md)
-
-4-2 [台湾跟进美国取消香港特殊待遇？ 在台港人：不宜一刀切](/articles/rfa/1045972.md)
-
-4-2 [云南瑞丽爆发新一波疫情    中缅边境疫情防控难度高](/articles/rfa/1045973.md)
 
