--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+5-6 [新西兰议会一致通过决议宣布中国在新疆“严重践踏人权”，“种族灭绝”一词被删除](/articles/voa/1041006.md)
+
+5-6 [菲律宾让本国渔民不要理会中国休渔令](/articles/voa/1041007.md)
+
 5-6 [特殊时期的非常措施：拜登政府支持放弃新冠疫苗知识产权保护](/articles/voa/1041008.md)
 
 5-6 [德国总理强调美国与欧洲关系的重要性](/articles/voa/1041009.md)
@@ -596,8 +600,4 @@
 4-23 [美众议院以党派划线通过让首都华盛顿成为美国第51个州议案](/articles/voa/1041304.md)
 
 4-23 [富士康威斯康辛建厂计划大幅缩水](/articles/voa/1041305.md)
-
-4-23 [香港首宗记者查册报道7-21事件被定罪罚款 记协指传媒黑暗的一日](/articles/voa/1041306.md)
-
-4-23 [乌克兰总统：俄罗斯从边界撤军减缓了紧张局势](/articles/voa/1041307.md)
 
