--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,10 @@
 自由亚洲电台
 ------
 
+5-6 [张向晨出任WTO副总干事     美中继续角力国际组织](/articles/rfa/1045669.md)
+
+5-6 [恶俗维基案牛腾宇近两年来首次见母亲](/articles/rfa/1045670.md)
+
 5-6 [一百六十余只猫狗被密封运输   宠物盲盒引众怒](/articles/rfa/1045671.md)
 
 5-6 [世卫评估中国疫苗：数据不够 信心不足](/articles/rfa/1045672.md)
@@ -596,8 +600,4 @@
 4-3 [中国挑衅不断    美澳商讨台海局势应变计划](/articles/rfa/1045967.md)
 
 4-3 [“留苏派”经济学家李京文病逝 曾支持三峡工程](/articles/rfa/1045968.md)
-
-4-3 [专访北加本地居民凯文·格兰特：“我把香港放在心上”](/articles/rfa/1045969.md)
-
-4-3 [孟晚舟律师称她未被加拿大任意拘留    控方称美国没有违反国际法](/articles/rfa/1045970.md)
 
