--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+5-6 [G7外长批中国侵犯人权 吁各国团结对抗新冠](/articles/dw/1042625.md)
+
+5-6 [印度5G试验排除中企  北京表示遗憾](/articles/dw/1042626.md)
+
 5-5 [默克尔计划受挫  欧盟搁置欧中投资协议](/articles/dw/1042627.md)
 
 5-5 [美国反亚裔仇恨案件激增](/articles/dw/1042628.md)
@@ -596,8 +600,4 @@
 4-18 [巴西最高法院推翻对前总统卢拉的贪腐判决](/articles/dw/1042923.md)
 
 4-18 [德国百姓越来越富](/articles/dw/1042924.md)
-
-4-18 [七张图看一周大事](/articles/dw/1042925.md)
-
-4-18 [打破藩籬：巴基斯坦第一位女板球裁判](/articles/dw/1042926.md)
 
