--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,10 @@
 金融时报
 ------
 
+5-6 [消费者维权可以有团队吗？](/articles/ft/1045667.md)
+
+5-6 [从赵婷的获奖感言谈儒家主张的“性本善”](/articles/ft/1045668.md)
+
 5-5 [永远不要挑战人心](/articles/ft/1045669.md)
 
 5-5 [画廊新生态：大画廊全方位挖掘内容价值](/articles/ft/1045670.md)
@@ -596,8 +600,4 @@
 3-2 [标普500指数创下去年6月以来最大单日涨幅](/articles/ft/1045965.md)
 
 3-2 [恒生指数将洗牌 纳入更多内地成分股](/articles/ft/1045966.md)
-
-3-1 [LIBOR退出，离岸美元影响几何？](/articles/ft/1045967.md)
-
-3-1 [欧盟如何解救“困在系统里”的平台工人](/articles/ft/1045968.md)
 
