--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+5-6 [奈及利亚学生绑架案 29人惊魂2个月后获释 – 法国国际广播电台 - RFI](/articles/rfi/1030430.md)
+
 5-6 [极其罕见！非洲妇女成功产下9胞胎 – 法国国际广播电台 - RFI](/articles/rfi/1030431.md)
 
 5-6 [G7外长会议公报呼吁中国在新疆香港尊重人权](/articles/rfi/1030432.md)
@@ -598,6 +600,4 @@
 5-1 [印度最高法院保护民众对政府抗疫不力表达不满的权利](/articles/rfi/1030728.md)
 
 5-1 [印度染疫新增病例再创新高 全球确诊突破1.5亿例 – 法国国际广播电台 - RFI](/articles/rfi/1030729.md)
-
-5-1 [瞄准红土首冠  大&amp;#22338;直美马德里网赛首轮获胜 – 法国国际广播电台 - RFI](/articles/rfi/1030730.md)
 
