--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-6 [世界“顶回”中国--（1）欧洲对中国期待的幻灭](/articles/voa/1041000.md)
+
 5-6 [美两党参议员对国务院人权报告删除西藏是中国一部分的表述表示赞赏](/articles/voa/1041001.md)
 
 5-6 [以色列总统挑选内塔尼亚胡最强大的对手组建新政府](/articles/voa/1041002.md)
@@ -598,6 +600,4 @@
 4-23 [白宫要义: 拜登宣布成立全球气候金融计划；美中俄在气候上寻求合作契机](/articles/voa/1041298.md)
 
 4-23 [涉中国“千人计划” 一博士化学师被判定犯有窃取商业秘密和经济间谍罪](/articles/voa/1041299.md)
-
-4-23 [全球气候峰会召开 - 气候政策学者对美中气候合作前景谨慎乐观](/articles/voa/1041300.md)
 
