--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+5-6 [汉堡快“灭绝”了吗？](/articles/nyt/1046897.md)
+
 5-6 [拜登的对台政策鲁莽而危险](/articles/nyt/1046898.md)
 
 5-6 [中国大举建设电动汽车厂，抢占海内外市场](/articles/nyt/1046899.md)
@@ -598,6 +600,4 @@
 2-8 [海航破产，中国私企的一个警示故事](/articles/nyt/1047195.md)
 
 2-8 [猫头鹰叔叔和卡通动画：香港“国安教育”进小学](/articles/nyt/1047196.md)
-
-2-8 [中国正式逮捕澳籍记者成蕾，指控其涉嫌泄露国家机密](/articles/nyt/1047197.md)
 
