--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,10 @@
 纽约时报
 ------
 
+5-6 [中央公园，纽约的永恒绿洲和庇护所](/articles/nyt/1046895.md)
+
+5-6 [大流行中，硅谷新贵如何庆祝“一夜暴富”](/articles/nyt/1046896.md)
+
 5-6 [汉堡快“灭绝”了吗？](/articles/nyt/1046897.md)
 
 5-6 [拜登的对台政策鲁莽而危险](/articles/nyt/1046898.md)
@@ -596,8 +600,4 @@
 2-9 [中国商人耿潇男将受审，曾声援许章润](/articles/nyt/1047193.md)
 
 2-9 [简报：商人耿潇男今日受审；中国连续两日无本土新增病例](/articles/nyt/1047194.md)
-
-2-8 [海航破产，中国私企的一个警示故事](/articles/nyt/1047195.md)
-
-2-8 [猫头鹰叔叔和卡通动画：香港“国安教育”进小学](/articles/nyt/1047196.md)
 
