--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,10 @@
 法广
 ------
 
+5-6 [美太空司令部正追踪中国火箭残骸降落位置 中国称“失控”说系炒作](/articles/rfi/1030419.md)
+
+5-6 [鼓励接种防疫 菲总统杜特蒂施打国药疫苗 – 法国国际广播电台 - RFI](/articles/rfi/1030420.md)
+
 5-6 [遭脸书停权 川普：国家之耻 – 法国国际广播电台 - RFI](/articles/rfi/1030421.md)
 
 5-6 [泯恩斯缔造无安打比赛 金莺52年来首人 – 法国国际广播电台 - RFI](/articles/rfi/1030422.md)
@@ -596,8 +600,4 @@
 5-1 [中国人口红利恐消失](/articles/rfi/1030717.md)
 
 5-1 [中国民航局暂停法航巴黎至上海航班两周](/articles/rfi/1030718.md)
-
-5-1 [拜登拟从5月4日起实施印度旅行禁令](/articles/rfi/1030719.md)
-
-5-1 [印度5月1日起开放所有成年人接种疫苗](/articles/rfi/1030720.md)
 
