--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+5-6 [尼尔森图书馆与林璎的人生故事](/articles/nyt/1046894.md)
+
 5-6 [中央公园，纽约的永恒绿洲和庇护所](/articles/nyt/1046895.md)
 
 5-6 [大流行中，硅谷新贵如何庆祝“一夜暴富”](/articles/nyt/1046896.md)
@@ -598,6 +600,4 @@
 2-9 [短暂的自由与关上的窗口：中国封禁Clubhouse](/articles/nyt/1047192.md)
 
 2-9 [中国商人耿潇男将受审，曾声援许章润](/articles/nyt/1047193.md)
-
-2-9 [简报：商人耿潇男今日受审；中国连续两日无本土新增病例](/articles/nyt/1047194.md)
 
