--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-6 [五角大楼称正密切追踪失控中国长征5B号火箭残骸落地前的动向](/articles/voa/1040998.md)
+
 5-6 [香港首次将六四烛光晚会参与者判罪 黄之锋再被判刑](/articles/voa/1040999.md)
 
 5-6 [世界“顶回”中国--（1）欧洲对中国期待的幻灭](/articles/voa/1041000.md)
@@ -598,6 +600,4 @@
 4-23 [NIH官员：逾百名受该院资助学者因未披露外国关系而被移除](/articles/voa/1041296.md)
 
 4-23 [布拉格与莫斯科纠纷加剧 捷克又宣布驱逐一批俄外交官](/articles/voa/1041297.md)
-
-4-23 [白宫要义: 拜登宣布成立全球气候金融计划；美中俄在气候上寻求合作契机](/articles/voa/1041298.md)
 
