--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -1,6 +1,8 @@
 中国数字时代
 ------
 
+5-6 [【图说天朝】称斯大林为独裁者，网民怒批俄媒忘本：没有大毛哪有你？](/articles/cdt/382909.md)
+
 5-6 [有Young实验室 ｜在大厂做了一年“鉴黄师”后，我转岗了](/articles/cdt/382911.md)
 
 5-6 [ABC｜中国宣布无限期暂停中澳战略经济对话机制下一切活动](/articles/cdt/382916.md)
@@ -598,6 +600,4 @@
 4-4 [【404文库】《给大午集团员工的一封信》《大午案十问十答》](/articles/cdt/384147.md)
 
 4-4 [BBC | 记者沙磊：“使我被迫离开的在中国作报道的严峻现实”](/articles/cdt/384149.md)
-
-4-4 [Matters | 【墙外的书】关于新疆那些棉花以外的事——《躁动的新疆 不安的维吾尔》](/articles/cdt/384157.md)
 
