--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+5-6 [G7外长会议公报首度提及台湾 强调台海和平稳定](/articles/rfa/1045668.md)
+
 5-6 [张向晨出任WTO副总干事     美中继续角力国际组织](/articles/rfa/1045669.md)
 
 5-6 [恶俗维基案牛腾宇近两年来首次见母亲](/articles/rfa/1045670.md)
@@ -598,6 +600,4 @@
 4-3 [因质疑英烈被刑拘再添一人 用爱国绑架爱党？](/articles/rfa/1045966.md)
 
 4-3 [中国挑衅不断    美澳商讨台海局势应变计划](/articles/rfa/1045967.md)
-
-4-3 [“留苏派”经济学家李京文病逝 曾支持三峡工程](/articles/rfa/1045968.md)
 
