--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+5-6 [亚股收盘涨多跌少 – 法国国际广播电台 - RFI](/articles/rfi/1030413.md)
+
 5-6 [暴动罪四年八个月法官称警方执法克制](/articles/rfi/1030414.md)
 
 5-6 [47人案胡志伟92岁父亲去世港府拒绝电子瞻仰遗容](/articles/rfi/1030415.md)
@@ -598,6 +600,4 @@
 5-1 [印度疫情震撼 警告峰值还在后面](/articles/rfi/1030711.md)
 
 5-1 [印度单日确认破40万例 累计1910万人染疫 – 法国国际广播电台 - RFI](/articles/rfi/1030712.md)
-
-5-1 [印度医院又失火 至少16染疫患者死亡 – 法国国际广播电台 - RFI](/articles/rfi/1030713.md)
 
