--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+5-6 [鲍彤忆文革：习仲勋是毛泽东“大大的受害者”](/articles/voa/1040995.md)
+
+5-6 [量子技术将为中西情报与安全关系带来颠覆变革](/articles/voa/1040996.md)
+
 5-6 [五角大楼: 即使新冠大流行未结束 奥斯汀期待出席香格里拉对话会](/articles/voa/1040997.md)
 
 5-6 [五角大楼称正密切追踪失控中国长征5B号火箭残骸落地前的动向](/articles/voa/1040998.md)
@@ -596,8 +600,4 @@
 4-23 [美参议员提出法案 要求拜登政府解密有关武病毒所情报](/articles/voa/1041293.md)
 
 4-23 [拜登在全球气候峰会设定雄心勃勃的碳排放目标](/articles/voa/1041294.md)
-
-4-23 [美官员谈中国挑战：美国必须专注加强经济竞争力](/articles/voa/1041295.md)
-
-4-23 [NIH官员：逾百名受该院资助学者因未披露外国关系而被移除](/articles/voa/1041296.md)
 
