--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-6 [美国预计到7月底新冠肺炎死亡人数将急剧下降](/articles/voa/1040992.md)
+
 5-6 [China suspends economic dialogue with Australia as relations curdle](/articles/voa/1040993.md)
 
 5-6 [民调：过七成中国民众认为中国已足够民主 专家：言论不自由，不敢说真话](/articles/voa/1040994.md)
@@ -598,6 +600,4 @@
 4-23 [美中在气候领域合作也能竞争 活动人士担心拜登忽视人权问题](/articles/voa/1041290.md)
 
 4-23 [美监管机构：电台/电视台必须披露外国政府或其代表租用频道信息](/articles/voa/1041291.md)
-
-4-23 [美军将领：中国有意在非洲增建军事基地](/articles/voa/1041292.md)
 
