--- a/lists/金融时报.md
+++ b/lists/金融时报.md
@@ -1,6 +1,8 @@
 金融时报
 ------
 
+5-6 [英法捕鱼权争端升级 英国派出军舰](/articles/ft/1045662.md)
+
 5-6 [美国支持豁免新冠疫苗专利 中国疫苗股受冲击](/articles/ft/1045663.md)
 
 5-6 [股票印花税：港股不能承受之轻](/articles/ft/1045664.md)
@@ -598,6 +600,4 @@
 3-2 [蚂蚁集团有限分享数据](/articles/ft/1045960.md)
 
 3-2 [可持续投资成为主流投资方式](/articles/ft/1045961.md)
-
-3-2 [Lex专栏：早该进行的恒生指数大洗牌](/articles/ft/1045962.md)
 
