--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+5-6 [“担忧”记者在华报道环境 “创新经济论坛”11月重返新加坡举行](/articles/voa/1040989.md)
+
+5-6 [台湾-澳门跨籍同性婚姻官司胜诉 户政机关需准许结婚登记申请](/articles/voa/1040990.md)
+
 5-6 [中国经济统战“地方包围中央”，澳大利亚：“此路不通”](/articles/voa/1040991.md)
 
 5-6 [美国预计到7月底新冠肺炎死亡人数将急剧下降](/articles/voa/1040992.md)
@@ -596,8 +600,4 @@
 4-23 [习近平博鳌讲话揭示“中国特色单边主义”玄机](/articles/voa/1041287.md)
 
 4-23 [美军将领称美国在非洲和中东仍具优势，但需努力维持](/articles/voa/1041288.md)
-
-4-23 [谭德赛“失宠”？](/articles/voa/1041289.md)
-
-4-23 [美中在气候领域合作也能竞争 活动人士担心拜登忽视人权问题](/articles/voa/1041290.md)
 
