--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+5-6 [中国暂停澳中战略经济对话机制   学者：实际意义不大](/articles/rfa/1045665.md)
+
 5-6 [香港首宗悼念六四被判刑案件   张先玲批政权心虚](/articles/rfa/1045666.md)
 
 5-6 [刘长乐售出凤凰股卫视股份两周  其女婿涉非法集资被刑拘](/articles/rfa/1045667.md)
@@ -598,6 +600,4 @@
 4-5 [民众注射疫苗送鸡蛋面粉  拒绝者影响今后子女上学](/articles/rfa/1045963.md)
 
 4-5 [台湾73年最惨重火车意外   交通部长引咎请辞](/articles/rfa/1045964.md)
-
-4-3 [强调新疆“恐怖分子罪行” 北京阻外媒赴疆调查](/articles/rfa/1045965.md)
 
