--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+5-6 [台湾呼应 要求中研院撤销港大校长张翔院士资格](/articles/rfa/1045664.md)
+
 5-6 [中国暂停澳中战略经济对话机制   学者：实际意义不大](/articles/rfa/1045665.md)
 
 5-6 [香港首宗悼念六四被判刑案件   张先玲批政权心虚](/articles/rfa/1045666.md)
@@ -598,6 +600,4 @@
 4-5 [中共中央下令赵紫阳家属搬离故居](/articles/rfa/1045962.md)
 
 4-5 [民众注射疫苗送鸡蛋面粉  拒绝者影响今后子女上学](/articles/rfa/1045963.md)
-
-4-5 [台湾73年最惨重火车意外   交通部长引咎请辞](/articles/rfa/1045964.md)
 
