--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,14 @@
 法广
 ------
 
+5-7 [菲律宾总统说：会把南海裁决扔到废纸篓](/articles/rfi/1030383.md)
+
+5-7 [英国开始地方选举 关乎苏格兰独立](/articles/rfi/1030384.md)
+
+5-7 [印度疫情感染死亡飙升 预计有第三浪潮](/articles/rfi/1030385.md)
+
+5-7 [中国&quot;强烈谴责&quot;G7外长声明](/articles/rfi/1030386.md)
+
 5-7 [难道巴西总统暗示中国制造疫情打“化学战”？](/articles/rfi/1030387.md)
 
 5-7 [法国商务观光旅游飞航市场仍停摆不振 - 法国风光](/articles/rfi/1030388.md)
@@ -592,12 +600,4 @@
 5-2 [2021五一节 厄瓜多尔因Covid疫情提前](/articles/rfi/1030681.md)
 
 5-1 [中国修改海上交通安全法 引忧虑](/articles/rfi/1030682.md)
-
-5-1 [中国政法委文点火批印度防疫不力却惹中国网民轰无胆接受人民评论](/articles/rfi/1030683.md)
-
-5-1 [国际科学家再次呼吁世卫进一步调查新冠病毒起源](/articles/rfi/1030684.md)
-
-5-1 [世卫组织称下周评估中国国药与科兴](/articles/rfi/1030685.md)
-
-5-1 [2021五一节 中国新《动物防疫法》启用](/articles/rfi/1030686.md)
 
