--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-7 [时事大家谈: 北京加紧扩张军力，欲称霸世界还是保政权？](/articles/voa/1040982.md)
+
 5-7 [布林肯称西方必须对中国投资“非常谨慎”](/articles/voa/1040983.md)
 
 5-7 [因拒绝使用新疆棉花 耐克阿迪网购遭抵制销量骤减](/articles/voa/1040984.md)
@@ -598,6 +600,4 @@
 4-23 [美日防务合作扩大，法国将在下月与日美举行联合军演](/articles/voa/1041280.md)
 
 4-23 [首款外国疫苗有望7月现身中国，什么样的人能“搞到”？](/articles/voa/1041281.md)
-
-4-23 [中国正式批捕农民企业家孙大午 八大罪名独缺关键一条](/articles/voa/1041282.md)
 
