--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+5-7 [分析：美国撤军对中国在阿富汗利益造成挑战](/articles/voa/1040974.md)
+
+5-7 [欧盟计划允许美国加拿大挪威参加军事项目](/articles/voa/1040975.md)
+
+5-7 [巴勒斯坦权力机构特使无视捣毁清真寺证据 称新疆清真寺数目众多](/articles/voa/1040976.md)
+
 5-7 [美军司令官：中国威胁也可能来自大西洋](/articles/voa/1040977.md)
 
 5-7 [新申请失业救济的美国人上周大幅减少](/articles/voa/1040978.md)
@@ -594,10 +600,4 @@
 4-24 [美国笔会：中国文字狱层出不穷 是全球关押最多作家的国家](/articles/voa/1041272.md)
 
 4-24 [阿拉巴马农工大学因联邦资金禁令而关闭其孔子学院](/articles/voa/1041273.md)
-
-4-24 [拜登称赞参议院通过打击反亚裔仇恨犯罪法案](/articles/voa/1041274.md)
-
-4-24 [流散海外港人拒绝被遗忘 呼吁积极保存身份持续推动国际线](/articles/voa/1041275.md)
-
-4-24 [拜登总统宣扬抗击气候变化的经济益处](/articles/voa/1041276.md)
 
