--- a/lists/法广.md
+++ b/lists/法广.md
@@ -1,6 +1,8 @@
 法广
 ------
 
+5-7 [若获欧盟批准 德拟8月前向12到18岁施打疫苗 – 法国国际广播电台 - RFI](/articles/rfi/1030367.md)
+
 5-7 [欧盟执委：欧中投资协定不算协定 更像是意向 – 法国国际广播电台 - RFI](/articles/rfi/1030368.md)
 
 5-7 [日本太空人谈重返地球 有回到水行星强烈感受 – 法国国际广播电台 - RFI](/articles/rfi/1030369.md)
@@ -598,6 +600,4 @@
 5-2 [挺总统比防疫重要 巴西数千人群聚示威没在怕 – 法国国际广播电台 - RFI](/articles/rfi/1030665.md)
 
 5-2 [委内瑞拉通膨严重 调薪3倍不够买一公斤肉 – 法国国际广播电台 - RFI](/articles/rfi/1030666.md)
-
-5-2 [因疫情停驶4个多月 义大利歌诗达邮轮复航 – 法国国际广播电台 - RFI](/articles/rfi/1030667.md)
 
