--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+5-7 [长征五号火箭脱轨失控，向地球坠落](/articles/nyt/1046885.md)
+
 5-7 [政变三个月后，缅甸回归恐怖统治](/articles/nyt/1046886.md)
 
 5-7 [两名亚裔女性在旧金山市中心遭遇持刀男子袭击](/articles/nyt/1046887.md)
@@ -598,6 +600,4 @@
 2-10 [网络和特朗普几乎扼杀了民主，欧洲能救我们吗？](/articles/nyt/1047183.md)
 
 2-10 [在俄罗斯，穿红色有了新意义](/articles/nyt/1047184.md)
-
-2-10 [七个问题，快速了解“天问一号”的火星之旅](/articles/nyt/1047185.md)
 
