--- a/lists/自由亚洲电台.md
+++ b/lists/自由亚洲电台.md
@@ -1,6 +1,8 @@
 自由亚洲电台
 ------
 
+5-7 [台外交部长警告 : 中国准备对台发动最后攻击](/articles/rfa/1045657.md)
+
 5-7 [学者呼吁美国加快立法    制止中国种族灭绝暴行](/articles/rfa/1045658.md)
 
 5-7 [美国支持豁免新冠疫苗专利保护  谁是最大获利者？](/articles/rfa/1045659.md)
@@ -598,6 +600,4 @@
 4-6 [“开胸验肺”黑幕曝光：前市委书记受贿四十万](/articles/rfa/1045955.md)
 
 4-6 [大午律师团十问十答：有可能人为拔高为涉黑涉恶](/articles/rfa/1045956.md)
-
-4-6 [中国垄断稀土开采引发格陵兰大选争议](/articles/rfa/1045957.md)
 
